@@ -159,6 +159,9 @@ ScriptOutputHandler.cantLoadScript: Failed to load script "{0}" into memory
 Tool.badNumericOption: Bad numeric value "{0}" for "{1}" ("{2}") option
 Tool.negNumericOption: Value of "{0}" ("{1}") option must be greather than 0.
 Tool.badDateTime: Bad date/time: "{0}"
+Tool.badConfigPath: \
+Configuration file argument "{0}" is not a valid URL and does not specify \
+the path to an existing file.
 
 # ---------------------------------------------------------------------------
 # FeedCache
